--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,7 +1,8 @@
 <section class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  <a href="#" class="btn">View on GitHub</a>
-  <a href="#" class="btn">Download .zip</a>
-  <a href="#" class="btn">Download .tar.gz</a>
+  <a href="#" class="btn">区块链</a>
+  <a href="#" class="btn">人工智能</a>
+  <a href="#" class="btn">大数据</a>
+  <a href="#" class="btn">智能制造</a>
 </section>
