--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="{{ site.locale }}">
-  
+
   {% include head.html %}
 
   <body>
     {% include page-header.html %}
 
     <section class="main-content">
-      
+
       {{ content }}
+      <span><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/">知识共享署名-非商业性使用-禁止演绎 3.0 未本地化版本许可协议</a>进行许可。</span>
 
       {% include page-footer.html %}
-
     </section>
 
   </body>
